--- a/assets/css/paper.css
+++ b/assets/css/paper.css
@@ -329,7 +329,9 @@ audio:not([controls]) {
 }
 
 img {
-  border-style: none;
+    display:block;
+    margin-left: auto;
+    margin-right:auto;
 }
 
 svg:not(:root) {
@@ -1076,6 +1078,12 @@ img.no-border {
   border: 0;
   border-radius: 0;
 }
+
+header-image {
+  background-image: url("../images/bg.png");
+  display: center;  
+}
+
 
 ol {
   list-style-type: decimal;
@@ -2014,6 +2022,7 @@ button.btn-muted-outline:hover:active,
   border: 0;
   border-radius: 0;
 }
+
 
 input,
 select,
