--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -1,4 +1,4 @@
-@bodyBgColor: #383838;
-@contentBgColor: #434348;
-@textColor: #dcdcdc;
+@bodyBgColor: #344E41;
+@contentBgColor: #3A5A40;
+@textColor: #DAD7CD;
 @skillRateCircleColor: #ffffff;
