--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -1,4 +1,4 @@
-@bodyBgColor: #344E41;
-@contentBgColor: #3A5A40;
+@bodyBgColor: #1b1b1d;
+@contentBgColor: #1c1c1f;
 @textColor: #DAD7CD;
 @skillRateCircleColor: #ffffff;
