--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -1,4 +1,4 @@
-@bodyBgColor: #1b1b1d;
-@contentBgColor: #1c1c1f;
+@bodyBgColor: #2e2833;
+@contentBgColor: #27212d;
 @textColor: #DAD7CD;
 @skillRateCircleColor: #ffffff;
